添加仿真功能

--- a/VduEditor/projects/project.json
+++ b/VduEditor/projects/project.json
@@ -1,7 +1,7 @@
-{
-  "created_at": "2026-01-15 20:47:39",
+﻿{
+  "created_at": "2026-01-15 21:44:24",
   "current_page_index": 1,
-  "modified_at": "2026-01-15 20:47:39",
+  "modified_at": "2026-01-15 21:44:24",
   "pages": [
     {
       "bg_color": 1985310,
@@ -13,7 +13,7 @@
           "module_path": "widgets.button",
           "props": {
             "alignment": "center",
-            "bg_color": "#007acc",
+            "bg_color": 57548,
             "color": "#ffffff",
             "design_mode": true,
             "enabled": true,
@@ -61,13 +61,34 @@
             "enabled": true,
             "font_size": 16,
             "height": 40,
-            "instance_name": "btnNext",
+            "instance_name": "btn_pg1_next",
             "label": "下一页",
             "on_clicked_handler": "function(self)\n    actions_page_navigation.goto_next_page()\nend",
             "on_double_clicked_handler": "",
             "on_single_clicked_handler": "",
             "width": 100,
             "x": 49,
+            "y": 264
+          },
+          "type": "custom_button"
+        },
+        {
+          "module_path": "widgets.button",
+          "props": {
+            "alignment": "center",
+            "bg_color": "#007acc",
+            "color": "#ffffff",
+            "design_mode": true,
+            "enabled": true,
+            "font_size": 16,
+            "height": 40,
+            "instance_name": "btn_pg1_last",
+            "label": "最后一页",
+            "on_clicked_handler": "function(self)\n    actions_page_navigation.goto_last_page()\nend",
+            "on_double_clicked_handler": "",
+            "on_single_clicked_handler": "",
+            "width": 100,
+            "x": 183,
             "y": 264
           },
           "type": "custom_button"
@@ -85,7 +106,7 @@
           "module_path": "widgets.trend_chart",
           "props": {
             "auto_update": true,
-            "design_mode": true,
+            "design_mode": false,
             "height": 300,
             "instance_name": "chart1",
             "on_updated_handler": "function(_, value)\n    print(\"TrendChart updated value:\", value)\nend",
@@ -105,11 +126,11 @@
             "alignment": "center",
             "bg_color": "#007acc",
             "color": "#ffffff",
-            "design_mode": true,
+            "design_mode": false,
             "enabled": true,
             "font_size": 16,
             "height": 40,
-            "instance_name": "btn_prepage",
+            "instance_name": "btn_page2_prepage",
             "label": "上一页",
             "on_clicked_handler": "function(self)\n    actions_page_navigation.goto_prev_page()\nend",
             "on_double_clicked_handler": "",
@@ -126,13 +147,14 @@
             "alignment": "center",
             "bg_color": "#007acc",
             "color": "#ffffff",
-            "design_mode": true,
+            "design_mode": false,
             "enabled": true,
             "font_size": 16,
             "height": 40,
-            "instance_name": "btn_nextpage",
+            "instance_name": "btn_page2_nextpage",
             "label": "下一页",
             "on_clicked_handler": "function(self)\n    actions_page_navigation.goto_next_page()\nend",
+            "on_clicked_params": "function(self)\n    actions_page_navigation.goto_next_page()\nend",
             "on_double_clicked_handler": "",
             "on_single_clicked_handler": "",
             "width": 100,
@@ -196,7 +218,8 @@
             "height": 40,
             "instance_name": "btn_open_all",
             "label": "一键全开",
-            "on_clicked_handler": "function()\n    print(\"执行：一键全开\")\n    Valve.open_all()\nend",
+            "on_clicked_handler": "function()\n    print(\"执行：一键全开\")\n    widgets_valve.open_all()\nend",
+            "on_clicked_params": "function()\n    print(\"执行：一键全开\")\n    widgets_valve.open_all()\nend",
             "on_double_clicked_handler": "",
             "on_single_clicked_handler": "",
             "width": 100,
@@ -217,7 +240,8 @@
             "height": 40,
             "instance_name": "btn_close_all",
             "label": "一键全关",
-            "on_clicked_handler": "function()\n    print(\"执行：一键全关\")\n    Valve.close_all()\nend",
+            "on_clicked_handler": "function()\n    print(\"执行：一键全关\")\n    widgets_valve.close_all()\nend",
+            "on_clicked_params": "function()\n    print(\"执行：一键全关\")\n    widgets_valve.close_all()\nend",
             "on_double_clicked_handler": "",
             "on_single_clicked_handler": "",
             "width": 100,
@@ -253,7 +277,7 @@
             "enabled": true,
             "font_size": 16,
             "height": 40,
-            "instance_name": "btn_prepage",
+            "instance_name": "btn_page3_prepage",
             "label": "上一页",
             "on_clicked_handler": "function(self)\n    actions_page_navigation.goto_prev_page()\nend",
             "on_double_clicked_handler": "",
@@ -274,9 +298,10 @@
             "enabled": true,
             "font_size": 16,
             "height": 40,
-            "instance_name": "btn_first",
+            "instance_name": "btn_page3_first",
             "label": "首页",
             "on_clicked_handler": "function(self)\n    actions_page_navigation.goto_first_page()\nend",
+            "on_clicked_params": "function(self)\n    actions_page_navigation.goto_first_page()\nend",
             "on_double_clicked_handler": "",
             "on_single_clicked_handler": "",
             "width": 100,
