增加状态栏属性编辑 增加label控件

--- a/VduEditor/VduEditor.vcxproj
+++ b/VduEditor/VduEditor.vcxproj
@@ -118,9 +118,7 @@
     <PostBuildEvent>
       <Command>xcopy "$(ProjectDir)lua" "$(TargetDir)lua\" /S /Y
 xcopy "$(ProjectDir)fonts" "$(TargetDir)fonts\" /S /Y
-xcopy "$(ProjectDir)icons" "$(TargetDir)icons\" /S /Y
-xcopy "$(ProjectDir)projects" "$(TargetDir)projects\" /S /Y
-xcopy "$(ProjectDir)projects\*.lua" "$(TargetDir)lua\" /S /Y</Command>
+xcopy "$(ProjectDir)icons" "$(TargetDir)icons\" /S /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -167,6 +165,7 @@ xcopy "$(ProjectDir)icons" "$(TargetDir)icons\" /S /Y</Command>
     <None Include="lua\editor\ProjectManager.lua" />
     <None Include="lua\editor\PropertyArea.lua" />
     <None Include="lua\editor\PropertyEventEditor.lua" />
+    <None Include="lua\editor\PropertyGlobalEditor.lua" />
     <None Include="lua\editor\PropertyInputs.lua" />
     <None Include="lua\editor\PropertyPageEditor.lua" />
     <None Include="lua\editor\PropertyWidgetEditor.lua" />
@@ -174,6 +173,7 @@ xcopy "$(ProjectDir)icons" "$(TargetDir)icons\" /S /Y</Command>
     <None Include="lua\general.lua" />
     <None Include="lua\print_widget_meta.lua" />
     <None Include="lua\widgets\button.lua" />
+    <None Include="lua\widgets\label.lua" />
     <None Include="lua\widgets\status_bar.lua" />
     <None Include="lua\widgets\trend_chart.lua" />
     <None Include="lua\widgets\valve.lua" />
