--- a/product/D/projects/project20260116.json
+++ b/product/D/projects/project20260116.json
@@ -1,7 +1,7 @@
 {
-  "created_at": "2026-01-17 13:43:18",
+  "created_at": "2026-01-17 18:20:40",
   "current_page_index": 3,
-  "modified_at": "2026-01-17 13:43:18",
+  "modified_at": "2026-01-17 18:20:40",
   "pages": [
     {
       "bg_color": "#1E4B1E",
@@ -383,12 +383,15 @@
   "status_bar": {
     "bg_color": "#252526",
     "enabled": true,
+    "instance_name": "statbar",
     "lamp_size": 14,
     "lamp_status": "#00FF00",
     "lamp_text": "CH1",
+    "on_time_tick_handler": "",
+    "on_updated_handler": "",
     "position": "bottom",
     "show_time": true,
-    "text_color": "#CCCCCC"
+    "text_color": "#CCCC2F"
   },
   "version": "1.0"
 }
