--- a/product/R/projects/project20260116.json
+++ b/product/R/projects/project20260116.json
@@ -1,7 +1,7 @@
 {
-  "created_at": "2026-01-17 13:43:18",
+  "created_at": "2026-01-17 20:53:12",
   "current_page_index": 3,
-  "modified_at": "2026-01-17 13:43:18",
+  "modified_at": "2026-01-17 20:53:12",
   "pages": [
     {
       "bg_color": "#1E4B1E",
@@ -368,6 +368,47 @@
             "y": 218
           },
           "type": "label"
+        },
+        {
+          "module_path": "widgets.checkbox",
+          "props": {
+            "box_color": "#3C3C3C",
+            "box_size": 20,
+            "check_color": "#007ACC",
+            "checked": false,
+            "design_mode": true,
+            "enabled": true,
+            "height": 30,
+            "instance_name": "ckBox1",
+            "on_changed_handler": "",
+            "text": "选项",
+            "text_color": "#FFFFFF",
+            "width": 120,
+            "x": 409,
+            "y": 337
+          },
+          "type": "checkbox"
+        },
+        {
+          "module_path": "widgets.slider",
+          "props": {
+            "bg_color": "#33292E",
+            "design_mode": true,
+            "enabled": true,
+            "height": 20,
+            "indicator_color": "#007ACC",
+            "instance_name": "",
+            "knob_color": 16777215,
+            "max_value": 100,
+            "min_value": 0,
+            "on_changed_handler": "",
+            "show_value": true,
+            "value": 50,
+            "width": 150,
+            "x": 380,
+            "y": 436
+          },
+          "type": "slider"
         }
       ],
       "width": 900
@@ -383,9 +424,12 @@
   "status_bar": {
     "bg_color": "#252526",
     "enabled": true,
+    "instance_name": "",
     "lamp_size": 14,
     "lamp_status": "#00FF00",
     "lamp_text": "CH1",
+    "on_time_tick_handler": "",
+    "on_updated_handler": "",
     "position": "bottom",
     "show_time": true,
     "text_color": "#CCCCCC"
